syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractContextDescriptorType";

import "sdc/biceps/abstractdescriptor.proto";

message AbstractContextDescriptor {
  AbstractDescriptor abstract_descriptor = 1;
}
